--- a/Web dev/Labwork 10/preceeding/body.css
+++ b/Web dev/Labwork 10/preceeding/body.css
@@ -3,5 +3,5 @@
     width: fit-content;
     padding: 10px;
     border-radius: 10px;
-    background-image: linear-gradient(to top, #accbee 0%, #e7f0fd 100%);
+    background: #94c5fd;
 }
